src/objects/MYBZ_MarketShareDetail__c.object
<CustomObject>
    <description>To store Top PGP, HCP information related to market for both affiliation and Non- Affiliation Extracts</description>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>MYBZ_District__c</referenceTo>
        <relationshipLabel>MarketShareDetails</relationshipLabel>
        <relationshipName>MarketShareDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gainer_Loser__c</fullName>
        <label>Gainer or Loser</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gainers__c</fullName>
        <label>Gain or Lose Percentage</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Id__c</fullName>
        <label>Global Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_or_PGP__c</fullName>
        <label>HCP or PGP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHS_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IHS Division</label>
        <referenceTo>MYBZ_IHS_Division__c</referenceTo>
        <relationshipLabel>MarketShareDetails</relationshipLabel>
        <relationshipName>MarketShareDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LE_ID_IHS__c</fullName>
        <label>LE_ID_IHS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_ID_PGP__c</fullName>
        <label>LE_ID_PGP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Type__c</fullName>
        <label>Load Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PGP</label>
        <referenceTo>MYBZ_PGP__c</referenceTo>
        <relationshipLabel>MarketShareDetails</relationshipLabel>
        <relationshipName>MarketShareDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physician_ID__c</fullName>
        <label>Physician ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Month_TRx__c</fullName>
        <label>Previous Month TRx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IHS Product</label>
        <referenceTo>MYBZ_Product__c</referenceTo>
        <relationshipLabel>MarketShareDetails</relationshipLabel>
        <relationshipName>MarketShareDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>MYBZ_Region__c</referenceTo>
        <relationshipLabel>MarketShareDetails</relationshipLabel>
        <relationshipName>MarketShareDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>MYBZ_System__c</referenceTo>
        <relationshipLabel>MarketShareDetails</relationshipLabel>
        <relationshipName>MarketShareDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRx_Units__c</fullName>
        <label>TRx Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>MYBZ_Territory__c</referenceTo>
        <relationshipLabel>MarketShareDetails</relationshipLabel>
        <relationshipName>MarketShareDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Bottom_PGP_ID__c</fullName>
        <label>Top or Bottom PGP ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Bottom_PGP__c</fullName>
        <label>Top or Bottom PGP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>MarketShareDetail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MarketShareDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MarketShareDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>